# qtcreator-plugin-sharemind-mpc

./: CMakeLists.txt
src/externaltools/: Analyze_SecreC.xml  Compile_SecreC.xml  Run_SecreC.xml
src/mime/: secrec.xml
src/scripts/: parse_profile.sh  sm_compile.sh  sm_compile_and_run.sh  sm_compile_and_run_and_analyze.sh
